--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -142,12 +142,15 @@ jobs:
           key: ${{ matrix.target }}-${{ matrix.toolchaingcc }}
       - uses: actions/setup-go@main
         with:
-          go-version: '1.22.3'
+          go-version: '1.23.5'
           check-latest: true
           cache: false
       - name: Prepare environment
         run: |
-          sudo apt-get update && sudo apt-get install -y libtool-bin gperf python3-docutils autopoint gettext ccache
+          sudo apt-get update && sudo apt-get install -y unzip libtool-bin ccache curl cmake gperf gawk flex bison nano xxd \
+            fakeroot kmod cpio bc zip git python3-docutils gettext automake autopoint \
+            texinfo build-essential help2man pkg-config zlib1g-dev libgmp3-dev \
+            libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget libc-dev-bin liblzma-dev
           echo "TRUNK_DIR=${{ github.workspace }}/trunk" >> $GITHUB_ENV
           echo "Compilation_time=$(TZ='Asia/Shanghai' date +%Y%m%d)" >> $GITHUB_ENV
       - name: Prepare toolchain
@@ -230,7 +233,7 @@ jobs:
       - uses: ncipollo/release-action@main
         if: ${{ github.event.inputs.release == 'true' }}
         with:
-          commit: ${{ github.sha }}
+          commit: main
           tag: ${{ env.Compilation_time }}
           artifacts: trunk/firmwares/*.trx
           allowUpdates: true
