boards: add KOMI-A8 Support

--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -34,6 +34,7 @@ on:
         - K2P
         - K2P-NANO
         - K2P-USB
+        - KOMI-A8
         - MI-4
         - MI-R3G
         - MI-R3P-PB
