boards: add WRL18M4GD Support

--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -58,6 +58,7 @@ on:
         - SIM-AX1800T
         - TX1801
         - WDR8620
+        - WRL18M4GD
         - WE410443-TC
         - WIA3300-10
         - WR1200JS
