boards: add ZTT-RX6000 Support

--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -65,6 +65,7 @@ on:
         - XY-C1
         - ZTE-E8820S
         - ZTE-E8820V2
+        - ZTT-RX6000
         default: K2P
       toolchain:
         description: 'Select the compilation toolchain'
