--- a/trunk/user/aria2/Makefile
+++ b/trunk/user/aria2/Makefile
@@ -1,8 +1,8 @@
 SRC_NAME=aria2-1.37.0
 SRC_URL=https://github.com/aria2/aria2/releases/download/release-1.37.0/$(SRC_NAME).tar.xz
 
-SRC_ARIA_NG_NAME=AriaNg-1.3.7-AllInOne
-SRC_ARIA_NG_URL=https://github.com/mayswind/AriaNg/releases/download/1.3.7/$(SRC_ARIA_NG_NAME).zip
+SRC_ARIA_NG_NAME=AriaNg-1.3.10-AllInOne
+SRC_ARIA_NG_URL=https://github.com/mayswind/AriaNg/releases/download/1.3.10/$(SRC_ARIA_NG_NAME).zip
 
 CFLAGS  += -fvisibility=hidden
 CXXFLAGS += -fvisibility-inlines-hidden
@@ -62,6 +62,8 @@ configure:
 		ZLIB_LIBS="-L$(STAGEDIR)/lib -lz" \
 		OPENSSL_CFLAGS="-I$(STAGEDIR)/include" \
 		OPENSSL_LIBS="-L$(STAGEDIR)/lib -lssl -lcrypto" \
+		LIBXML2_CFLAGS="-I$(STAGEDIR)/include/libxml2" \
+		LIBXML2_LIBS="-L$(STAGEDIR)/lib -lxml2" \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
